feat: Configurações e atualização do CorsConfig.